trunk/Implementacao/Negocio/SCEUNI/bin/unioeste/ia/trabalho1/controle/parser/sala/ParseSala.jj
options {
  JDK_VERSION = "1.6";
  STATIC = false ; 
}
PARSER_BEGIN(ParseSala)
package unioeste.ia.trabalho1.controle.parser.sala;

import java.util.List;
import java.util.ArrayList;
import unioeste.ia.trabalho1.pojo.Sala;

public class ParseSala {

    private List<Sala> listaSala = new ArrayList<Sala>();

	public void setListaSala(List<Sala> listaSala) {
		this.listaSala = listaSala;
	}

	public List<Sala> getListaSala() {
		return listaSala;
	}

}
PARSER_END(ParseSala)
TOKEN_MGR_DECLS:{
  static int countLexError = 0;
  public int foundLexError(){
    return countLexError;
  }
}
SKIP:
{
        <"/*" (~["\n"])* "\n">
}

SKIP :
{
  " "
  | "\t"
  | "\n"
  | "\r"
  | "\f"
}
TOKEN : 
{
	< LETRA: ["a" - "z" , "A" - "Z"] >
|   < SIMBOLO:["ç","á","é","í","ó","ú","ã","õ","ü","à","ê","â","ô"]>
|	< IDENTIFICADOR: <LETRA> ( <LETRA> | <DIGIT>|<ESPACO>|<SIMBOLO> )* >
|   < SERIE: <DIGIT><LETRA> >
|   < CONSTANTE: ( <DIGIT> )+ >
|   < DIGIT: ["0" - "9"] >
|   < ESPACO:[" "]>

}

String sala():
{
	Token t;
}
{
	t = <IDENTIFICADOR>
	{
		return t.image;
	}
}

Integer capacidade():
{
    Token t;
}
{
	t = <CONSTANTE>
	{
		return Integer.parseInt(t.image);
	}
}

void load():
{
}
{
  (loadTudo())*
}


void loadTudo():
{
 String nmSala = " ";
 Integer capacidade = 0;
}
{
  	nmSala = sala() ", " capacidade = capacidade() "."
  	{
   	  	Sala sala = new Sala();
  	  	
		//sala.setCd_sala(null);
		sala.setCapacidade(capacidade);
		sala.setNmSala(nmSala);
		//sala.setListaAula(null);

  	    listaSala.add(sala);
  	    sala.setCdSala(listaSala.size());
    }
}
